# robotsix_gpt

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  assistant_config.json  assistant_issue_comment.txt  chunk_tool.py  compose.yml  ids_output.txt  init_assistant.py  project.yml  pyproject.toml  repo_assistant_config.json  requirements.txt  run_assistant.py  run_assistant_on_issue.yaml  setup.py  style_checker.py  thread-id  thread_id.json
ai_assistant/: assistant.py  assistant_config.json  assistant_functions.py  assistant_functions_fsm.py  assistant_gpt.py  assistant_tools.py  create_repo_assistant.py  delete_repo_assistant.py  embedding_search.py  fsm_ai_assistant.py  generate_commit.py  git.py  git_utils.py  init_assistant.py  repo_chunker.py  run_assistant.py  squash_branch.py  update_assistant.py  update_embedding.py  update_files.py  utils.py
rsgpt/: litellm_handler.py  main.py  tools.py
scripts/: clean_backup_files.sh  commit.sh  generate_commit.py  generate_commit.sh  squash_and_pr.sh  squash_branch.sh
test/: .gitkeep  setup_fake_git.py  test_git_utils.py  test_main.py  test_repo_worker.py
tools/: assistant_functions.py  assistant_gpt.py  clean_assistant_files.py  clean_update_vector_store.py  clean_vector_store.py  configure_assistant.py  create_assistant.py  create_repo_assistant.py  create_step_by_step_assistant.py  delete_all_gpt_files.py  delete_assistant.py  dump_assistant_config.py  fetch_ids_from_names.py  generate_repo_structure.py  initial_config.json  load_files_assistant.py  run_assistant.py  solve_step_by_step.py  update_assistant.py  (+2 more)
(+63 files in other folders)
